<resources>
    <string name="app_name">Projekt1</string>
    <string name="product_list">Product list</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->

    <string name="visibility">Visibility</string>
    <string name="night_mode">Night Mode</string>
    <string name="font_size">Font size</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="add_product">Add Product</string>
    <string name="broadcast_filter">com.example.projekt1.PRODUCT_BROADCAST</string>
    <string name="save">Save</string>
    <string name="amount">amount</string>
    <string name="tx_mainbutton">Zaczynajmy</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>


</resources>